<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="T_State" Id="{eb1ec7e3-db5f-42cd-899b-4535f556cfe4}">
    <Declaration><![CDATA[TYPE T_State :
(
    WACHTEN,
    DRINKEN,
    LEEG,
    KLAAR
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>