<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL" Id="{c0ece6c9-4a99-4dff-881c-d145713c02f1}">
    <Declaration><![CDATA[VAR_GLOBAL
    (* Treinreis *)
    ReisGestart      : BOOL := FALSE;
    OverstapBereikt  : BOOL := FALSE;
    Aangekomen       : BOOL := FALSE;

    (* Bier *)
    Biertjes         : UINT := 100;
	stefan_bier : UINT:= 0;
	wiebe_bier : UINT:= 0; 

    (* Spel *)
    SpelGestart      : BOOL := FALSE;
    Ronde            : UINT := 0;
	spelstop 		: BOOL:= FALSE; 

    (* Avond *)
    AvondKlaar       : BOOL := FALSE;
	IN: INT;
	koelkast_leeg : BOOL;  
	koelkast_vol : bool; 
	
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>