<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="PRG_BeerSession" Id="{76912403-e508-47d1-9c5d-44804af3e56e}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_BeerSession
VAR
    T_Biertje_stefan : TON;
	T_biertje_wiebe: ton; 
	T_biertje: ton; 
	koelkast : BOOL;
 State : T_State := WACHTEN;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
CASE State OF

    // -------------------------
    WACHTEN:
    // -------------------------
        IF Aangekomen AND NOT AvondKlaar THEN
            IF biertjes > 0 THEN
                koelkast_vol := TRUE;
                koelkast_leeg := FALSE;
                State := DRINKEN;
            END_IF
        END_IF


    // -------------------------
    DRINKEN:
    // -------------------------
        // Timers alleen actief in deze state
        T_biertje_stefan(IN := TRUE, PT := T#3S);
        T_biertje_wiebe (IN := TRUE, PT := T#5S);

        // Stefan drinkt
        IF T_biertje_stefan.Q AND (biertjes > 0) THEN
            stefan_bier := stefan_bier + 1;
            biertjes := biertjes - 1;
            T_biertje_stefan(IN := FALSE);
        END_IF

        // Wibe drinkt
        IF T_biertje_wiebe.Q AND (biertjes > 0) THEN
            wiebe_bier := wiebe_bier + 1;
            biertjes := biertjes - 1;
            T_biertje_wiebe(IN := FALSE);
        END_IF

        // Overgang naar LEEG
        IF biertjes = 0 THEN
            State := LEEG;
        END_IF

        // Overgang naar KLAAR
        IF AvondKlaar THEN
            State := KLAAR;
        END_IF


    // -------------------------
    LEEG:
    // -------------------------
        koelkast_vol := FALSE;
        koelkast_leeg := TRUE;

        // Timers uit
        T_biertje_stefan(IN := FALSE);
        T_biertje_wiebe (IN := FALSE);

        IF AvondKlaar THEN
            State := KLAAR;
        END_IF


    // -------------------------
    KLAAR:
    // -------------------------
        koelkast_vol := FALSE;
        koelkast_leeg := TRUE;

        T_biertje_stefan(IN := FALSE);
        T_biertje_wiebe (IN := FALSE);

END_CASE
]]></ST>
    </Implementation>
    <LineIds Name="PRG_BeerSession">
      <LineId Id="227" Count="0" />
      <LineId Id="153" Count="70" />
      <LineId Id="47" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>